<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextView.Label"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <!-- The bill amount -->

    <TextView
        style="@style/TextView.Label"
        android:id="@+id/billAmountLabel"
        android:text="@string/bill_amount_label" />

    <EditText
        style="@style/EditText"
        android:id="@+id/billAmountEditText"
        android:layout_alignBaseline="@+id/billAmountLabel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/billAmountLabel"
        android:ems="8"
        android:inputType="numberDecimal"
        android:text="@string/bill_amount" >

        <requestFocus />
    </EditText>

    <!-- The tip percent -->
    
    <TextView
        style="@style/TextView.Label"
        android:id="@+id/percentLabel"
        android:layout_alignLeft="@+id/billAmountLabel"
        android:layout_below="@+id/billAmountLabel"
        android:text="@string/tip_percent_label" />

    <TextView
        style="@style/TextView"
        android:id="@+id/percentTextView"
        android:layout_alignBaseline="@+id/percentLabel"
        android:layout_alignLeft="@+id/billAmountEditText"
        android:text="@string/tip_percent" />

    <Button
        style="@style/Button"
        android:id="@+id/percentUpButton"
        android:layout_alignBaseline="@+id/percentLabel"
        android:layout_alignRight="@+id/billAmountEditText"
        android:layout_below="@+id/billAmountEditText"
        android:text="@string/increase" />

    <Button
        style="@style/Button"
        android:id="@+id/percentDownButton"
        android:layout_alignBaseline="@+id/percentLabel"
        android:layout_toLeftOf="@+id/percentUpButton"
        android:text="@string/decrease" />

    <!-- the tip amount -->
    
    <TextView
        style="@style/TextView.Label"
        android:id="@+id/tipLabel"
        android:layout_alignLeft="@+id/percentLabel"
        android:layout_below="@+id/percentLabel"
        android:text="@string/tip_amount_label" />

    <TextView
        style="@style/TextView"
        android:id="@+id/tipTextView"
        android:layout_alignBaseline="@+id/tipLabel"
        android:layout_alignLeft="@id/billAmountEditText"
        android:text="@string/tip_amount" />

    <!-- the total -->
    
    <TextView
        style="@style/TextView.Label"
        android:id="@+id/totalLabel"
        android:layout_alignLeft="@+id/tipLabel"
        android:layout_below="@+id/tipLabel"
        android:text="@string/total_amount_label" />

    <TextView
        style="@style/TextView"
        android:id="@+id/totalTextView"
        android:layout_alignBaseline="@+id/totalLabel"
        android:layout_alignLeft="@+id/tipTextView"
        android:text="@string/total_amount" />

    <TextView
        android:id="@+id/perPersonLabel"
        style="@style/TextView.Label"
        android:layout_alignLeft="@+id/totalLabel"
        android:layout_below="@+id/totalLabel"
        android:text="@string/per_person_label" />

    <TextView
        android:id="@+id/perPersonTextView"
        style="@style/TextView"
        android:layout_alignBaseline="@+id/perPersonLabel"
        android:layout_alignBottom="@+id/perPersonLabel"
        android:layout_alignLeft="@+id/totalTextView"
        android:text="@string/per_person_amount" />

</RelativeLayout>